--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+/* 
+  SolarCalculation v4.0 by mpplearning
+  License: Non-Commercial Use Only
+  Contact: punmanee@gmail.com
+*/
+
 body {
     font-family: 'Prompt', sans-serif;
     background-color: #f0f8ff;
